# collab_canvas

./: .gitignore  CNAME  Cargo.toml  Procfile
.github/workflows/: deploy.yml
client/: Cargo.toml
client/src/: lib.rs
server/: cargo.toml
server/src/: main.rs
src/: lib.rs  main.rs
static/: collaboration_canvas_client.js  collaboration_canvas_client_bg.wasm  index.html  script.js  style.css  styles.css
